# xsec-tuning-nova

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.h
ana2024/: PrintTestEvents.C  PrintTestEventsDIS.C  PrintTestEventsDIS.txt  PrintTestEventsDIS_prefsi_rhc_anaxsec.txt  PrintTestEventsRES.C  generate_nd_ehadvis_quantiles_predictions.C  generate_nd_q3Reco_quantiles_predictions.C  generate_nd_reco_enu_quantiles_predictions.C  initialize_nd_ehadvis_quantiles_data.C  plot_nd_preds_RES_DIS_shifts.C  plot_preds_nd_ehadvis_quantiles_errorbands.C  plot_preds_nd_reco_enu_quantiles_RES_DIS_shifts.C  plot_preds_nd_reco_enu_quantiles_errorbands.C  plot_preds_nd_reco_enu_quantiles_shifts.C  plot_specific_systematic_errorbands_with_spectra.C  validate_DISHadronSyst_weights.C  validate_new_RES_DIS_systs.C
ana2024/box-opening/: compare_numu_event_cuts_2020_vs_2024.C  generate_fd_decaf_cuts_prod51_p1p10_reco_enu_2024info_mc.C  generate_fd_nue_spectra_crpa_study.C  (+14 more)
neutrino24-poster/: README.md  generate_nd_allnumu_ehadvis_charged_vs_neutral_hadrons.C  generate_nd_mupix_ehadvis_charged_vs_neutral_hadrons.C  generate_nd_p5p1_true_Q2_W_quantiles.C  generate_nd_p5p1_true_Q2_quantiles.C  generate_nd_p5p1_true_W_quantiles.C  hadd_nd_Q2_quantiles_preds.sh  hadd_nd_W_quantiles_preds.sh  hadd_nd_var_quantiles_preds.sh  plot_preds_nd_ehadvis_allnumu_errorbands_charged_vs_neutral_pions.C  plot_preds_nd_ehadvis_allnumu_npi_resvpvn_dishadro_errorbands.C  plot_preds_nd_ehadvis_mupix_npi_resvpvn_dishadro_errorbands.C  plot_preds_nd_ehadvis_quantiles_errorbands_newRESDIS.C
(+11 files in other folders)
